fixed overflow issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,7 +41,7 @@ useful-app {
   text-align: center;
 }
 
-md-content {
+md-content, .md-sidenav-content {
   min-height: 100%;
   height: auto !important;
 }
